--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.box-container {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  height: 100%;
+  min-width: 1200px;
+  max-width: 80rem;
+  align-items: center;
+  justify-content: center;
+  gap: 1.25rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
